--- a/.github/workflows/build-immortalwrt.yml
+++ b/.github/workflows/build-immortalwrt.yml
@@ -1,9 +1,9 @@
-
+#
 ####################################
 #  update for Fndsz  #  immortalwrt
 ####################################
 name: 编译mir3g_immortalwrt固件
-
+on:
 on: 
   repository_dispatch:
   workflow_dispatch:
@@ -66,8 +66,9 @@ on:
         options:
         - "false"
         - "true"
+
 env:
-  TIMEZONE: Asia/Shanghai
+TIMEZONE: Asia/Shanghai
   
   UPLOAD_ACTIONSRUNS: true
   
@@ -88,8 +89,7 @@ env:
   RUN_AFTERPATCH: ${{ github.event.inputs.after_patch }}
   AFTER_PATCH: '${{ github.event.inputs.resource_directory }}/make_after.sh'
   UPLOAD_RELEASE: ${{ github.event.inputs.upload_release }}
-  
-  
+
 jobs:
   build:
     runs-on: ubuntu-20.04
@@ -101,148 +101,147 @@ jobs:
     - name: 初始化编译环境
       env:
         DEBIAN_FRONTEND: noninteractive
-        #非交互式环境
       run: |
         sudo rm -rf /etc/apt/sources.list.d/* /usr/share/dotnet /usr/local/lib/android /opt/ghc
         sudo -E apt-get -qq update
-        sudo -E apt-get -qq install $(curl -fsSL git.io/depends-ubuntu-2004)
+        sudo -E apt-get -qq install $(curl -fsSL git.io/depends-ubuntu-1804)
         sudo -E apt-get -qq autoremove --purge
         sudo -E apt-get -qq clean
-        sudo timedatectl set-timezone "$TIMEZONE"
+        sudo timedatectl set-timezone "$TZ"
         sudo mkdir -p /workdir
         sudo chown $USER:$GROUPS /workdir
-    
-    - name: 提取系统信息
+
+    - name: 克隆源代码
       working-directory: /workdir
       run: |
-         echo -e "CPU: $(cat /proc/cpuinfo | grep name | cut -f2 -d: | uniq -c) \n"
-         echo -e "UserName: $(whoami) \n"
-         echo -e "SystemInfo: \n$(lsb_release  -a 2>&1 | grep -vi 'No LSB') \n"
-         
-    - name: 拉取OpenWRT仓库
-      working-directory: /workdir
-      run: |
+        df -hT $PWD
         git clone $REPO_URL -b $REPO_BRANCH openwrt
         ln -sf /workdir/openwrt $GITHUB_WORKSPACE/openwrt
-    
-    - name: 检查文件状态
-      id: check
-      run: |
-        [ -e $FEEDS_FILE ] && echo "::set-output name=feeds::success"
-        [ -e $FILES_PATH ] && echo "::set-output name=files::success"
-        [ -e $OPENWRT_PATCH ] && echo "::set-output name=patch::success"
-        [ -e $BEFOR_PATCH ] && echo "::set-output name=befor::success"
-        [ -e $AFTER_PATCH ] && echo "::set-output name=after::success"
-    
-    - name: 替换软件源配置
-      if: env.REPLACE_FEEDS == 'true' && steps.check.outputs.feeds == 'success'
-      run: |
-        [ -e $FEEDS_FILE ] && rm -f openwrt/feeds.conf.default
-        [ -e $FEEDS_FILE ] && mv $FEEDS_FILE openwrt/feeds.conf.default
-    
+
     - name: 加载固件配置
-      run: mv $CONFIG_FILE openwrt/.config
-      
-    - name: 导入补丁目录
-      if: env.LOAD_FILES == 'true' && steps.check.outputs.files == 'success'
-      run: mv $FILES_PATH openwrt/files
-        
-    - name: 执行仓库脚本
-      if: env.RUN_OPENWRTPATCH == 'true' && steps.check.outputs.patch == 'success'
       run: |
-        chmod +x $OPENWRT_PATCH
+        [ -e $FEEDS_CONF ] && mv $FEEDS_CONF openwrt/feeds.conf.default
+        chmod +x $DIY_P1_SH
         cd openwrt
-        $GITHUB_WORKSPACE/$OPENWRT_PATCH
-        
-    - name: 更新并安装软件源
+        $GITHUB_WORKSPACE/$DIY_P1_SH
+
+    - name: 更新软件源
+      run: cd openwrt && ./scripts/feeds update -a
+
+    - name: 安装软件源
+      run: cd openwrt && ./scripts/feeds install -a
+
+    - name: Load custom configuration
       run: |
-        cd openwrt 
-        ./scripts/feeds update -a && ./scripts/feeds install -a
-        ./scripts/feeds update -a && ./scripts/feeds install -a
-    
-    - name: 执行编译前脚本
-      if: env.RUN_BEFORPATCH == 'true' && steps.check.outputs.befor == 'success'
-      run: |
-        chmod +x $BEFOR_PATCH
+        [ -e files ] && mv files openwrt/files
+        [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
+        chmod +x $DIY_P2_SH
         cd openwrt
-        $GITHUB_WORKSPACE/$BEFOR_PATCH
-    
-    - name: 下载编译所需
-      id: makedownload
+        $GITHUB_WORKSPACE/$DIY_P2_SH
+
+    - name: SSH连接操作
+      uses: P3TERX/ssh2actions@v1.0.0
+      if: (github.event.inputs.ssh == 'true' && github.event.inputs.ssh  != 'false') || contains(github.event.action, 'ssh')
+      env:
+        TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+        TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+
+    - name: 下载包
+      id: package
       run: |
         cd openwrt
         make defconfig
         make download -j8
         find dl -size -1024c -exec ls -l {} \;
         find dl -size -1024c -exec rm -f {} \;
-        
-        
-    - name: 编译固件
-      id: makefirmware
+
+    - name: 编译的固件
+      id: compile
       run: |
         cd openwrt
-        echo -e "$(nproc) thread cpu"
-        echo "Start Time: "$(date +"%Y/%m/%d %H:%M:%S")""
+        echo -e "$(nproc) thread compile"
         make -j$(nproc) || make -j1 || make -j1 V=s
-        echo "End Time: "$(date +"%Y/%m/%d %H:%M:%S")""
         echo "::set-output name=status::success"
         grep '^CONFIG_TARGET.*DEVICE.*=y' .config | sed -r 's/.*DEVICE_(.*)=y/\1/' > DEVICE_NAME
         [ -s DEVICE_NAME ] && echo "DEVICE_NAME=_$(cat DEVICE_NAME)" >> $GITHUB_ENV
         echo "FILE_DATE=_$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
-    
-    - name: 执行编译后脚本
-      if: env.RUN_AFTERPATCH == 'true' && steps.check.outputs.after == 'success'
-      run: |
-        chmod +x $AFTER_PATCH
-        cd openwrt
-        $GITHUB_WORKSPACE/$AFTER_PATCH
-    
+
+    - name: 检查空间使用情况
+      if: (!cancelled())
+      run: df -hT
+
+    - name: 上传bin目录
+      uses: actions/upload-artifact@main
+      if: steps.compile.outputs.status == 'success' && env.UPLOAD_BIN_DIR == 'true'
+      with:
+        name: OpenWrt_bin${{ env.DEVICE_NAME }}${{ env.FILE_DATE }}
+        path: openwrt/bin
+
     - name: 整理文件
       id: organize
-      if: steps.makefirmware.outputs.status == 'success'
+      if: env.UPLOAD_FIRMWARE == 'true' && !cancelled()
       run: |
         cd openwrt/bin/targets/*/*
+        rm -rf packages
         echo "FIRMWARE=$PWD" >> $GITHUB_ENV
         echo "::set-output name=status::success"
-        
+
     - name: 上传固件
       uses: actions/upload-artifact@main
-      if: env.UPLOAD_ACTIONSRUNS == 'true' && steps.organize.outputs.status == 'success'
+      if: steps.organize.outputs.status == 'success' && !cancelled()
       with:
         name: OpenWrt_firmware${{ env.DEVICE_NAME }}${{ env.FILE_DATE }}
         path: ${{ env.FIRMWARE }}
-    
-    - name: 清理ActionsRuns旧数据
-      uses: GitRML/delete-workflow-runs@main
-      with:
-        retain_days: 1
-        keep_minimum_runs: 5
-        
+
+    - name: 上传固件至cowtransfer
+      id: cowtransfer
+      if: steps.organize.outputs.status == 'success' && env.UPLOAD_COWTRANSFER == 'true' && !cancelled()
+      run: |
+        curl -fsSL git.io/file-transfer | sh
+        ./transfer cow --block 2621440 -s -p 64 --no-progress ${FIRMWARE} 2>&1 | tee cowtransfer.log
+        echo "::warning file=cowtransfer.com::$(cat cowtransfer.log | grep https)"
+        echo "::set-output name=url::$(cat cowtransfer.log | grep https | cut -f3 -d" ")"
+
+    - name: 上传固件至WeTransfer
+      id: wetransfer
+      if: steps.organize.outputs.status == 'success' && env.UPLOAD_WETRANSFER == 'true' && !cancelled()
+      run: |
+        curl -fsSL git.io/file-transfer | sh
+        ./transfer wet -s -p 16 --no-progress ${FIRMWARE} 2>&1 | tee wetransfer.log
+        echo "::warning file=wetransfer.com::$(cat wetransfer.log | grep https)"
+        echo "::set-output name=url::$(cat wetransfer.log | grep https | cut -f3 -d" ")"
+
     - name: 生成release标签
-      id: releasetag
-      if: env.UPLOAD_RELEASE == 'true' && steps.makefirmware.outputs.status == 'success' && !cancelled()
+      id: tag
+      if: env.UPLOAD_RELEASE == 'true' && !cancelled()
       run: |
         echo "::set-output name=release_tag::$(date +"%Y.%m.%d-%H%M")"
         touch release.txt
         [ $UPLOAD_COWTRANSFER = true ] && echo "🔗 [Cowtransfer](${{ steps.cowtransfer.outputs.url }})" >> release.txt
         [ $UPLOAD_WETRANSFER = true ] && echo "🔗 [WeTransfer](${{ steps.wetransfer.outputs.url }})" >> release.txt
         echo "::set-output name=status::success"
-        
+
     - name: 上传固件到Release
       uses: softprops/action-gh-release@v1
-      if: env.UPLOAD_RELEASE == 'true' && steps.releasetag.outputs.status == 'success' && !cancelled()
+      if: steps.tag.outputs.status == 'success' && !cancelled()
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: ${{ steps.releasetag.outputs.release_tag }}
+        tag_name: ${{ steps.tag.outputs.release_tag }}
         body_path: release.txt
         files: ${{ env.FIRMWARE }}/*
-        
+
+    - name: Delete workflow runs
+      uses: GitRML/delete-workflow-runs@main
+      with:
+        retain_days: 1
+        keep_minimum_runs: 3
+
     - name: 清理Releases旧数据
       uses: dev-drprasad/delete-older-releases@v0.1.0
       if: env.UPLOAD_RELEASE == 'true' && !cancelled()
       with:
-        keep_latest: 2
+        keep_latest: 3
         delete_tags: true
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
