--- a/.github/workflows/build-immortalwrt.yml
+++ b/.github/workflows/build-immortalwrt.yml
@@ -1,28 +1,20 @@
 #
-# Copyright (c) 2019-2020 P3TERX <https://p3terx.com>
-#
-# This is free software, licensed under the MIT License.
-# See /LICENSE for more information.
-#
-# https://github.com/P3TERX/Actions-OpenWrt
-# Description: Build OpenWrt using GitHub Actions
-#
-
-name: Build MiR3G
+####################################
+#  update for Fndsz  #  immortalwrt
+####################################
+name: 编译mir3g_immortalwrt固件
 on:
   repository_dispatch:
   workflow_dispatch:
     inputs:
-      ssh:
-        description: 'SSH connection to Actions'
-        required: false
-        default: 'false'
-
-env:
-  REPO_URL: https://github.com/immortalwrt/immortalwrt
-  repo_branch:
+      resource_directory:
         type: choice
-        description: ' repo_branch'
+        description: '路由器资源目录'
+        options:
+          - "XIAOMI-R3G"
+      repo_branch:
+        type: choice
+        description: '版本分支'
         options:
           - "master"
           - "openwrt-18.06"
@@ -33,57 +25,109 @@ env:
           - "v21.02.3"
           - "v21.02.2"
           - "v21.02.1"
+          
+      feeds_file:
+        type: choice
+        description: '替换软件源配置(feeds.conf.default)'
+        options:
+        - "true"
+        - "false"
+      config_file:
+        description: 'config 文件名称(.config)'
+        default: 'r3g.config'
+      files_path:
+        type: choice
+        description: '导入补丁目录(files目录)'
+        options:
+        - "true"
+        - "false"
+      openwrt_patch:
+        type: choice
+        description: '执行仓库脚本(openwrt_patch.sh)'
+        options:
+        - "true"
+        - "false"
+      befor_patch:
+        type: choice
+        description: '执行编译前脚本(make_befor.sh)'
+        options:
+        - "true"
+        - "false"
+      after_patch:
+        type: choice
+        description: '执行编译后脚本(make_after.sh)'
+        options:
+        - "true"
+        - "false"
+      upload_release:
+        type: choice
+        description: '发布到release'
+        options:
+        - "false"
+        - "true"
+
+env:
+  TIMEZONE: Asia/Shanghai
   
-  FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: r3g.config
-  DIY_P1_SH: diy-part1.sh
-  DIY_P2_SH: diy-part2.sh
-  UPLOAD_BIN_DIR: false
-  UPLOAD_FIRMWARE: true
-  UPLOAD_COWTRANSFER: false
-  UPLOAD_WETRANSFER: false
-  UPLOAD_RELEASE: true
-  TZ: Asia/Shanghai
+  UPLOAD_ACTIONSRUNS: true
+  
+  Resoure_DIR: ${{ github.event.inputs.resource_directory }}
+  
+  REPO_URL: https://github.com/immortalwrt/immortalwrt
+  
+  REPO_BRANCH: ${{ github.event.inputs.repo_branch }}
+  CONFIG_FILE: '${{ github.event.inputs.resource_directory }}/${{ github.event.inputs.config_file }}'
+  FEEDS_FILE: '${{ github.event.inputs.resource_directory }}/feeds.conf.default'
+  REPLACE_FEEDS: ${{ github.event.inputs.feeds_file }}
+  LOAD_FILES: ${{ github.event.inputs.files_path }}
+  FILES_PATH: '${{ github.event.inputs.resource_directory }}/files'
+  RUN_OPENWRTPATCH: ${{ github.event.inputs.openwrt_patch }}
+  OPENWRT_PATCH: '${{ github.event.inputs.resource_directory }}/openwrt_patch.sh'
+  RUN_BEFORPATCH: ${{ github.event.inputs.befor_patch }}
+  BEFOR_PATCH: '${{ github.event.inputs.resource_directory }}/make_befor.sh'
+  RUN_AFTERPATCH: ${{ github.event.inputs.after_patch }}
+  AFTER_PATCH: '${{ github.event.inputs.resource_directory }}/make_after.sh'
+  UPLOAD_RELEASE: ${{ github.event.inputs.upload_release }}
 
 jobs:
   build:
     runs-on: ubuntu-20.04
 
     steps:
-    - name: Checkout
+    - name: 检出仓库数据
       uses: actions/checkout@main
 
-    - name: Initialization environment
+    - name: 初始化编译环境
       env:
         DEBIAN_FRONTEND: noninteractive
       run: |
         sudo rm -rf /etc/apt/sources.list.d/* /usr/share/dotnet /usr/local/lib/android /opt/ghc
         sudo -E apt-get -qq update
-        sudo -E apt-get -qq install $(curl -fsSL git.io/depends-ubuntu-1804)
+        sudo -E apt-get -qq install $(curl -fsSL git.io/depends-ubuntu-2004)
         sudo -E apt-get -qq autoremove --purge
         sudo -E apt-get -qq clean
         sudo timedatectl set-timezone "$TZ"
         sudo mkdir -p /workdir
         sudo chown $USER:$GROUPS /workdir
 
-    - name: Clone source code
+    - name: 克隆源代码
       working-directory: /workdir
       run: |
         df -hT $PWD
         git clone $REPO_URL -b $REPO_BRANCH openwrt
         ln -sf /workdir/openwrt $GITHUB_WORKSPACE/openwrt
 
-    - name: Load custom feeds
+    - name: 加载固件配置
       run: |
         [ -e $FEEDS_CONF ] && mv $FEEDS_CONF openwrt/feeds.conf.default
         chmod +x $DIY_P1_SH
         cd openwrt
         $GITHUB_WORKSPACE/$DIY_P1_SH
 
-    - name: Update feeds
+    - name: 更新软件源
       run: cd openwrt && ./scripts/feeds update -a
 
-    - name: Install feeds
+    - name: 安装软件源
       run: cd openwrt && ./scripts/feeds install -a
 
     - name: Load custom configuration
@@ -94,14 +138,14 @@ jobs:
         cd openwrt
         $GITHUB_WORKSPACE/$DIY_P2_SH
 
-    - name: SSH connection to Actions
+    - name: SSH连接操作
       uses: P3TERX/ssh2actions@v1.0.0
       if: (github.event.inputs.ssh == 'true' && github.event.inputs.ssh  != 'false') || contains(github.event.action, 'ssh')
       env:
         TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
         TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
 
-    - name: Download package
+    - name: 下载包
       id: package
       run: |
         cd openwrt
@@ -110,7 +154,7 @@ jobs:
         find dl -size -1024c -exec ls -l {} \;
         find dl -size -1024c -exec rm -f {} \;
 
-    - name: Compile the firmware
+    - name: 编译的固件
       id: compile
       run: |
         cd openwrt
@@ -121,18 +165,18 @@ jobs:
         [ -s DEVICE_NAME ] && echo "DEVICE_NAME=_$(cat DEVICE_NAME)" >> $GITHUB_ENV
         echo "FILE_DATE=_$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
 
-    - name: Check space usage
+    - name: 检查空间使用情况
       if: (!cancelled())
       run: df -hT
 
-    - name: Upload bin directory
+    - name: 上传bin目录
       uses: actions/upload-artifact@main
       if: steps.compile.outputs.status == 'success' && env.UPLOAD_BIN_DIR == 'true'
       with:
         name: OpenWrt_bin${{ env.DEVICE_NAME }}${{ env.FILE_DATE }}
         path: openwrt/bin
 
-    - name: Organize files
+    - name: 整理文件
       id: organize
       if: env.UPLOAD_FIRMWARE == 'true' && !cancelled()
       run: |
@@ -141,14 +185,14 @@ jobs:
         echo "FIRMWARE=$PWD" >> $GITHUB_ENV
         echo "::set-output name=status::success"
 
-    - name: Upload firmware directory
+    - name: 上传固件
       uses: actions/upload-artifact@main
       if: steps.organize.outputs.status == 'success' && !cancelled()
       with:
         name: OpenWrt_firmware${{ env.DEVICE_NAME }}${{ env.FILE_DATE }}
         path: ${{ env.FIRMWARE }}
 
-    - name: Upload firmware to cowtransfer
+    - name: 上传固件至cowtransfer
       id: cowtransfer
       if: steps.organize.outputs.status == 'success' && env.UPLOAD_COWTRANSFER == 'true' && !cancelled()
       run: |
@@ -157,7 +201,7 @@ jobs:
         echo "::warning file=cowtransfer.com::$(cat cowtransfer.log | grep https)"
         echo "::set-output name=url::$(cat cowtransfer.log | grep https | cut -f3 -d" ")"
 
-    - name: Upload firmware to WeTransfer
+    - name: 上传固件至WeTransfer
       id: wetransfer
       if: steps.organize.outputs.status == 'success' && env.UPLOAD_WETRANSFER == 'true' && !cancelled()
       run: |
@@ -166,7 +210,7 @@ jobs:
         echo "::warning file=wetransfer.com::$(cat wetransfer.log | grep https)"
         echo "::set-output name=url::$(cat wetransfer.log | grep https | cut -f3 -d" ")"
 
-    - name: Generate release tag
+    - name: 生成release标签
       id: tag
       if: env.UPLOAD_RELEASE == 'true' && !cancelled()
       run: |
@@ -176,7 +220,7 @@ jobs:
         [ $UPLOAD_WETRANSFER = true ] && echo "🔗 [WeTransfer](${{ steps.wetransfer.outputs.url }})" >> release.txt
         echo "::set-output name=status::success"
 
-    - name: Upload firmware to release
+    - name: 上传固件到Release
       uses: softprops/action-gh-release@v1
       if: steps.tag.outputs.status == 'success' && !cancelled()
       env:
@@ -192,7 +236,7 @@ jobs:
         retain_days: 1
         keep_minimum_runs: 3
 
-    - name: Remove old Releases
+    - name: 清理Releases旧数据
       uses: dev-drprasad/delete-older-releases@v0.1.0
       if: env.UPLOAD_RELEASE == 'true' && !cancelled()
       with:
